--- a/index.html
+++ b/index.html
@@ -116,19 +116,19 @@
               <div class="col-md-4">
                   <div class="cate1 d-flex justify-content-center align-items-center">
                       <h1>perfume</h1>
-                  <img src="images/categories/perfume.png" alt="watch">
+                  <img src="images/categories/perfume.png" alt="perfume">
                   </div>
               
               </div>
               <div class="col-md-4">
                   <div class="cate2  d-flex justify-content-center align-items-center">
                       <h1>Shoes</h1>
-                      <img src="images/categories/shoe.png" alt="watch"></div>
+                      <img src="images/categories/shoe.png" alt="shoe"></div>
               </div>
               <div class="col-md-4">
                   <div class="cate3  d-flex justify-content-center align-items-center">
                       <h1>Bag</h1>
-                      <img src="images/categories/bag.png" alt="watch"></div>
+                      <img src="images/categories/bag.png" alt="Bag"></div>
               </div>
           </div>
 
