--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <a class="nav-link" href="#">Pricing</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="#Catagories">Catagories</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#">About us</a>
               </li>
               <li class="nav-item">
@@ -110,7 +113,7 @@
 
       </div> 
       <div>
-        <div class="container categories">
+        <div class="container categories" id="Catagories">
           <div class="row">
               
               <div class="col-md-4">
@@ -164,8 +167,7 @@
               <div class="card-footer">
                 <button class="btn btn-dark">Buy Now →</button>
               </div>
-            </div>
-          </div>
+           </div>
           <div class="col">
             <div class="card h-100">
               <img src="images/phone/phone-3.png" class="card-img-top" alt="...">
