--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="#">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Catagories">Catagories</a>
+                <a class="nav-link" href="#Categories">Categories</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About us</a>
@@ -113,7 +113,7 @@
 
       </div> 
       <div>
-        <div class="container categories" id="Catagories">
+        <div class="container categories" id="categories">
           <div class="row">
               
               <div class="col-md-4">
