--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
   <main>
     <div class="container">
-      <div class="catagories">
-        <h1>Catagories</h1>
+      <div class="categories" id="Categories">
+        <h1>Categories</h1>
       </div>
       <div class="hr-line">
 
@@ -143,90 +143,95 @@
     <div class="container smartphone" id="Smartphone">
       <h3>Smartphone</h3> 
       <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="col">
-            <div class="card h-100">
-              <img src="images/phone/phone-1.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Mi Redmi 5i</h5>
-                <p class="card-text">This is Mi redmi 5i blue color, only 500 pieces available and we got you covered as we have them on stock. You should order now before it's stock out.</p>
-                <h5>300$</h5>
-              </div>
-              <div class="card-footer">
-                <button class="btn btn-dark">Buy Now →</button>
-              </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/phone/phone-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Mi Redmi 5i</h5>
+              <p class="card-text">This is Mi redmi 5i blue color, only 500 pieces available and we got you covered as we have them on stock. You should order now before it's stock out.</p>
+              <h5>300$</h5>
+            </div>
+            <div class="card-footer">
+              <button class="btn btn-dark">Buy Now →</button>
             </div>
           </div>
-          <div class="col">
-            <div class="card h-100">
-              <img src="images/phone/phone-2.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Iphone 12</h5>
-                <p class="card-text">This is Iphone 12 golden color, only 500 pieces available and we got you covered as we have them on stock. You should order now before it's stock out.</p>
-                <h5>900$</h5>
-              </div>
-              <div class="card-footer">
-                <button class="btn btn-dark">Buy Now →</button>
-              </div>
-           </div>
-          <div class="col">
-            <div class="card h-100">
-              <img src="images/phone/phone-3.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Samsung Note 9</h5>
-                <p class="card-text">This is Samsung Note 9 black color, only 500 pieces available and we got you covered as we have them on stock. You should order now before it's stock out.</p>
-                <h5>800$</h5>
-              </div>
-              <div class="card-footer">
-                <button class="btn btn-dark">Buy Now →</button>
-              </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/phone/phone-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Iphone 12</h5>
+              <p class="card-text">TThis is Iphone 12 golden color, only 500 pieces available and we got you covered as we have them on stock. You should order now before it's stock out.</p>
+              <h5>900$</h5>
+            </div>
+            <div class="card-footer">
+              <button class="btn btn-dark">Buy Now →</button>
             </div>
           </div>
-        </div> 
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/phone/phone-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Samsung Note 9</h5>
+              <p class="card-text">This is Samsung Note 9 black color, only 500 pieces available and we got you covered as we have them on stock. You should order now before it's stock out.</p>
+              <h5>800$</h5>
+            </div>
+            <div class="card-footer">
+              <button class="btn btn-dark">Buy Now →</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
-        <div class="container laptops" id="Laptop">
-          <h3>Laptops</h3> 
-          <div class="row row-cols-1 row-cols-md-3 g-4">
-              <div class="col">
-                <div class="card h-100">
-                  <img src="images/laptop/product-1.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Asus vivobook</h5>
-                    <p class="card-text">This is Asus vivobook Ash color, only 500 pieces available and we got you covered as we have them in stock. You should order now before it's stock out.</p>
-                    <h5>300$</h5>
-                  </div>
-                  <div class="card-footer">
-                    <button class="btn btn-dark">Buy Now →</button>
 
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card h-100">
-                  <img src="images/laptop/product-2.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Razor 5</h5>
-                    <p class="card-text">This is Razor 5 black color, only 500 pieces available and we got you covered as we have them on stock. You should order now before it's stock out.</p>
-                    <h5>900$</h5>
-                  </div>
-                  <div class="card-footer">
-                    <button class="btn btn-dark">Buy Now →</button>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card h-100">
-                  <img src="images/laptop/product-3.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Mi laptop</h5>
-                    <p class="card-text">This is Mi laptop silver color, only 500 pieces available and we got you covered as we have 50 of them. You should order now before it's stock out.</p>
-                    <h5>800$</h5>
-                  </div>
-                  <div class="card-footer">
-                    <button class="btn btn-dark">Buy Now →</button>
-                  </div>
-                </div>
-              </div>
-            </div> 
+
+    <div class="laptops" id="Laptops">
+      <h2>Laptops</h2>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/laptop/product-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Asus vivoboo</h5>
+              <p class="card-text">This is Asus vivobook Ash color, only 500 pieces available and we got you covered as we have them in stock. You should order now before it's stock out.</p>
+              <h5>600$</h5>
+            </div>
+            <div class="card-footer">
+              <button class="btn btn-dark">Buy Now →</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/laptop/product-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is Razor 5 black color, only 500 pieces available and we got you covered as we have them on stock. You should order now before it's stock out.</p>
+              <h5>900$</h5>
+            </div>
+            <div class="card-footer">
+              <button class="btn btn-dark">Buy Now →</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="images/laptop/product-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Mi laptop</h5>
+              <p class="card-text">This is Mi laptop silver color, only 500 pieces available and we got you covered as we have 50 of them. You should order now before it's stock out.
+              </p>
+              <h5>400$</h5>
+            </div>
+            <div class="card-footer">
+              <button class="btn btn-dark">Buy Now →</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
 
   </main>
 
