--- a/index.html
+++ b/index.html
@@ -117,11 +117,9 @@
           <div class="row">
               
               <div class="col-md-4">
-                  <div class="cate1 d-flex justify-content-center align-items-center">
-                      <h1>perfume</h1>
-                  <img src="images/Categories/pale-order.png" alt="perfume">
-                  </div>
-              
+                <div class="cate1  d-flex justify-content-center align-items-center">
+                  <h1>Perfume</h1>
+                  <img src="images/Categories/pale-order.png" alt="Perfume"></div>
               </div>
               <div class="col-md-4">
                   <div class="cate2  d-flex justify-content-center align-items-center">
